--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,7 @@
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-KK83S585');</script>
   <!-- End Google Tag Manager -->
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-YNTTC81Z9F"></script>
   <script>
